[gd_scene load_steps=4 format=3 uid="uid://c7vd1ipd0w8ke"]

[ext_resource type="Script" path="res://quit_confirm.gd" id="1_7fwif"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp78j"]
bg_color = Color(1.92523e-07, 0.671054, 0.785285, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m48no"]
bg_color = Color(0.172833, 0.172833, 0.172833, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Window" type="Window"]
title = "Save Analitics?"
initial_position = 1
size = Vector2i(300, 100)
exclusive = true
unresizable = true
always_on_top = true
popup_window = true
script = ExtResource("1_7fwif")

[node name="Control" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="save_analitics" type="Button" parent="Control"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxFlat_hp78j")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_hp78j")
theme_override_styles/hover = SubResource("StyleBoxFlat_hp78j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hp78j")
theme_override_styles/normal = SubResource("StyleBoxFlat_hp78j")
text = "Save to Desktop :)"

[node name="quit" type="Button" parent="Control"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_m48no")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_m48no")
theme_override_styles/hover = SubResource("StyleBoxFlat_m48no")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m48no")
theme_override_styles/normal = SubResource("StyleBoxFlat_m48no")
text = "Quit Without Saving :("

[connection signal="pressed" from="Control/save_analitics" to="." method="_on_save_analitics_pressed"]
[connection signal="pressed" from="Control/quit" to="." method="_on_quit_pressed"]
